# CorrAut

./: auth.pem  build.sh  database.py  db.sqlite3  gitattributes  pymongo_get_database.py  pyproject.toml  render.yaml  requirements.txt
Scripts/: activate  activate.bat
Web/: settings.py  urls.py  views.py  wsgi.py
Web/static/cad-gab/: cad-gab.js  script.js  stylecadbag.css
Web/static/dashboard/: dashboard.js  styledashboard.css
Web/static/login/: login.js  script.js  stylelogin.css
Web/static/turmas/: script.js  styleturmas.css  turmas.js
Web/templates/: cadgab.html  dashboard.html  login.html  turmas.html
